--- a/site/indexas.html
+++ b/site/indexas.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Labas coursera</title>
+	<title>Laba diena</title>
 </head>
 <body>
-<h1>Labas Coursera</h1>
+<h1>Laba diena</h1>
 </body>
 </html>
